created index ui

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ server:
 
 # 数据库 及 Redis 配置    
 spring:
+# disable caching for Thymeleaf so that we can make changes on the fly
+  thymeleaf:
+    cache: false
   redis:
     host: localhost
     password:
